# rust-tpm2

./: Cargo.toml  README.md
data/: ek.pub
src/: main.rs
src/device/: device.rs  errors.rs  mod.rs  raw.rs  rawtpm.rs  tcp.rs
src/tpm2/: errors.rs  inout.rs  mod.rs  types.rs
src/tpm2/commands/: commands.rs  import.rs  load.rs  mod.rs  pcr.rs  pcrread.rs  pcrs.rs  run.rs  session.rs  startup.rs  unseal.rs
src/tpm2/serialization/: inout.rs  mod.rs
src/tpm2/types/: .tcg.rs.swp  mod.rs  tcg.rs  tcg.rs~
